# app/controllers/concerns/error_handling.rb
@@ -22,6 +22,18 @@ module ErrorHandling
       }, status: :not_found
     end
 
+    rescue_from CRM::Adapters::GetIntoTeaching::Resource::BadRequestError do |exception|
+      render json: { error: { message: exception.message } }, status: :bad_request
+    end
+
+    rescue_from CRM::Adapters::GetIntoTeaching::Resource::UnauthorizedError do |exception|
+      render json: { error: { message: exception.message } }, status: :unauthorized
+    end
+
+    rescue_from ActionController::ParameterMissing do |exception|
+      render json: { errors: [ exception.message ] }, status: :bad_request
+    end
+
     private
 
     def not_found_resource_name
