# swagger/v1/swagger.yaml
@@ -979,6 +979,50 @@ paths:
                 - "First name can't be blank"
         401:
           $ref: "#/components/responses/Unauthorized"
+  "/api/teacher_training_adviser/candidates/exchange_access_token/{accessToken}":
+    post:
+      tags:
+      - Teacher Training Adviser
+      summary: Exchange an access token for a full candidate sign-up.
+      operationId: ExchangeAccessTokenForTeacherTrainingAdviserSignUp
+      parameters:
+      - name: accessToken
+        in: path
+        required: true
+        description: The access token to exchange.
+        schema:
+          type: string
+      requestBody:
+        description: Candidate details to exchange.
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: "#/components/schemas/ExistingCandidateRequest"
+            example:
+              email: "johndoe@example.com"
+              first_name: "John"
+              last_name: "Doe"
+              date_of_birth: "2000-01-01"
+      responses:
+        200:
+          description: successful
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/TeacherTrainingAdviserSignUp"
+        400:
+          description: bad request
+          content:
+            application/json:
+              schema:
+                type: object
+              example:
+                errors:
+                - "Email can't be blank"
+                - "Email is invalid"
+        401:
+          $ref: "#/components/responses/Unauthorized"
   "/api/teacher_training_adviser/matchbacks":
     post:
       tags:
